--- a/src/components/Priorities/priorities.module.css
+++ b/src/components/Priorities/priorities.module.css
@@ -1,6 +1,5 @@
 .container {
-    max-width: 1920px;
-    width: 70%;
+    max-width: 70%;
     display: flex;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     margin-bottom: 50px;
