--- a/src/components/Priorities/priorities.module.css
+++ b/src/components/Priorities/priorities.module.css
@@ -1,5 +1,6 @@
 .container {
-    max-width: 70%;
+    max-width: 1920px;
+    width: 70%;
     display: flex;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     margin-bottom: 50px;
@@ -11,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     min-width: 40%;
-    margin-left: 60px;
+    padding-left: 60px;
 }
 
 .title {
