--- a/src/components/Priorities/priorities.module.css
+++ b/src/components/Priorities/priorities.module.css
@@ -5,6 +5,7 @@
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     margin-bottom: 50px;
     position: relative;
+    border-radius: 20px;
 }
 
 .leftSide {
