minor fixes in styles

--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -8,7 +8,7 @@
 }
 
 .bannerContent {
-    width: 70%;
+    max-width: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
