--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -1,4 +1,3 @@
-
 .header {
     width: 100%;
     display: flex;
@@ -6,7 +5,6 @@
     align-items: start;
     position: relative;
     margin-bottom: 50px;
-
 }
 
 .logo {
@@ -21,15 +19,52 @@
 .burger {
     width: 30px;
     margin-top: 35px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1100;
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--LightBlue);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px;
+    box-sizing: border-box;
+    z-index: 1000;
+    transition: right 0.3s ease-in-out;
+}
+
+.menuOpen {
+    right: 0;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .navigationItem {
     font-family: Inter;
     font-size: 18px;
     color: var(--Black);
+    cursor: pointer;
 }
 
-.navigationItem:last-child {
-    margin-right: 0;
+.socials {
+    display: flex;
+    gap: 20px;
+    margin-top: auto;
 }
 
+.socials img {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
