--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -29,15 +29,18 @@
     top: 0;
     right: -100%;
     width: 100%;
+    max-width: 100%;
     height: 100%;
     background-color: var(--LightBlue);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 50px;
     box-sizing: border-box;
     z-index: 1000;
     transition: right 0.3s ease-in-out;
+    padding-top: 35%;
+    padding-left: 5%;
+    padding-bottom: 50px;
 }
 
 .menuOpen {
@@ -53,18 +56,22 @@
 .navigationItem {
     font-family: Inter;
     font-size: 18px;
+    font-weight: 400;
     color: var(--Black);
     cursor: pointer;
+    margin-bottom: 35px;
 }
 
 .socials {
     display: flex;
-    gap: 20px;
-    margin-top: auto;
+    justify-content: center;
+    gap: 30px;
+    /*margin-bottom: 50px;*/
 }
 
 .socials img {
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
+
