--- a/src/app.desktop.module.css
+++ b/src/app.desktop.module.css
@@ -1,14 +1,12 @@
 .container {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    max-width: 1920px;
-    margin: auto;
+    align-items: center;
 }
 
-
-.bannerSection{
+.bannerSection {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
