--- a/src/components/Desktop/GetStartedToday/getStartedTodat.module.css
+++ b/src/components/Desktop/GetStartedToday/getStartedTodat.module.css
@@ -1,12 +1,16 @@
 .container {
-    max-width: 1920px;
+    width: 100%;
+    max-width: 1200px; /* Set a max width to center content */
     display: flex;
     align-items: center;
     margin-bottom: 30px;
+    padding: 0 20px; /* Add padding to create space on the sides */
+    box-sizing: border-box; /* Ensure padding is included in width */
 }
 
 .leftSide {
-    max-width: 50%;
+    flex: 1;
+    padding-right: 20px; /* Add padding between left and right sides */
 }
 
 .image {
@@ -14,11 +18,10 @@
 }
 
 .rightSide {
-    width: 50%;
-    max-width: 535px;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    margin-right: auto;
+    padding-left: 20px; /* Add padding between left and right sides */
 }
 
 .title {
@@ -26,7 +29,6 @@
     font-size: 36px;
     font-weight: 500;
     margin-bottom: 30px;
-
 }
 
 .description {
@@ -37,9 +39,9 @@
 }
 
 .links {
-
+    display: flex;
 }
 
-.downloadLinks {
-
+.links a {
+    margin-right: 20px;
 }
