--- a/src/components/Mobile/Contact/contact.module.css
+++ b/src/components/Mobile/Contact/contact.module.css
@@ -4,12 +4,11 @@
     align-items: center;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     border-radius: 20px;
+    padding-top: 50px;
 }
 
 .image {
-    margin-top: 50px;
-    margin-bottom: 30px;
-
+    margin-bottom: 20px;
 }
 
 .title {
