minor changes in styles for mobile version

--- a/src/components/Mobile/GetStartedToday/getStartedToday.module.css
+++ b/src/components/Mobile/GetStartedToday/getStartedToday.module.css
@@ -1,9 +1,8 @@
 .container {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
     flex-direction: column;
-    padding: 0 15px;
+    padding: 20px 15px 0;
 }
 
 
