--- a/src/components/Mobile/OurServices/ourServices.module.css
+++ b/src/components/Mobile/OurServices/ourServices.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 0 15px;
-    margin-bottom: 70px;
+    padding: 20px 15px 0;
+    margin-bottom: 50px;
 }
 
 .title {
