--- a/src/components/Desktop/Priorities/priorities.module.css
+++ b/src/components/Desktop/Priorities/priorities.module.css
@@ -1,6 +1,10 @@
-.container {
+.extraContainer{
     max-width: 1920px;
     width: 70%;
+    padding-top: 200px;
+}
+
+.container {
     display: flex;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     margin-bottom: 50px;
