--- a/src/components/Desktop/WhyChoose/whyChoose.module.css
+++ b/src/components/Desktop/WhyChoose/whyChoose.module.css
@@ -1,17 +1,17 @@
 .container {
     width: 100%;
-    max-width: 1200px; /* Set a max width to center content */
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 240px;
-    padding: 0 20px; /* Add padding to create space on the sides */
-    box-sizing: border-box; /* Ensure padding is included in width */
+    margin-bottom: 40px;
+    padding: 70px 20px 0;
+    box-sizing: border-box;
 }
 
 .leftSide {
     flex: 1;
-    padding-right: 20px; /* Add padding between left and right sides */
+    padding-right: 20px;
 }
 
 .doctorImage {
@@ -22,7 +22,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding-left: 20px; /* Add padding between left and right sides */
+    padding-left: 20px;
 }
 
 .title {
