--- a/src/components/Mobile/Priorities/priorities.module.css
+++ b/src/components/Mobile/Priorities/priorities.module.css
@@ -1,3 +1,8 @@
+.extraContainer{
+    padding-top: 40px;
+}
+
+
 .container {
     display: flex;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
