--- a/src/components/Desktop/Banner/banner.module.css
+++ b/src/components/Desktop/Banner/banner.module.css
@@ -47,10 +47,11 @@
 
 .doctorImgWrapper {
     max-width: 100%;
+    margin-left: -15% ;
 }
 
 .doctorImg {
-    max-width: 100%;
+    width: 140%;
 }
 
 .title {
