--- a/src/components/Desktop/GetStartedToday/getStartedTodat.module.css
+++ b/src/components/Desktop/GetStartedToday/getStartedTodat.module.css
@@ -1,27 +1,19 @@
 .container {
     width: 100%;
-    max-width: 1200px; /* Set a max width to center content */
+    max-width: 1200px;
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
-    padding: 0 20px; /* Add padding to create space on the sides */
-    box-sizing: border-box; /* Ensure padding is included in width */
-}
-
-.leftSide {
-    flex: 1;
-    padding-right: 20px; /* Add padding between left and right sides */
-}
-
-.image {
-    width: 100%;
+    margin-bottom: 200px;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .rightSide {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding-left: 20px; /* Add padding between left and right sides */
+    padding-left: 20px;
+    margin-left: 30px;
 }
 
 .title {
@@ -36,6 +28,7 @@
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 40px;
+    max-width: 80%;
 }
 
 .links {
@@ -44,4 +37,45 @@
 
 .links a {
     margin-right: 20px;
+}
+
+
+.phoneWrapper {
+    flex: 1;
+    padding-right: 20px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    max-width: 100%;
+    margin-left: -30px;
+}
+
+.phoneImage {
+    max-width: 50%;
+    z-index: 999;
+}
+
+.circle1 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 80%;
+    height: 80%;
+    margin: auto;
+}
+
+.circle2 {
+    position: absolute;
+    bottom: -20%;
+    left: 0;
+    max-width: 70%;
+}
+
+.circle3 {
+    position: absolute;
+    top: -15%;
+    right: 10%;
+    max-width: 50%;
 }
