--- a/src/components/Desktop/Priorities/priorities.module.css
+++ b/src/components/Desktop/Priorities/priorities.module.css
@@ -7,7 +7,7 @@
 .container {
     display: flex;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
-    margin-bottom: 50px;
+    margin-bottom: 150px;
     position: relative;
     border-radius: 20px;
 }
@@ -45,4 +45,5 @@
     right: -10px;
     bottom: 30px;
     max-width: 60%;
+    max-height: 100%;
 }
