--- a/src/app.desktop.module.css
+++ b/src/app.desktop.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .bannerSection {
