--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -10,6 +10,7 @@
 .logo {
     flex: 0;
     position: absolute;
+    z-index: 99;
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
