--- a/src/app.mobile.module.css
+++ b/src/app.mobile.module.css
@@ -2,7 +2,7 @@
     display: flex;
     max-width: 450px;
     flex-direction: column;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .bannerSection{
