--- a/src/components/Tablet/Header/header.module.css
+++ b/src/components/Tablet/Header/header.module.css
@@ -41,6 +41,7 @@
     transition: right 0.3s ease-in-out;
     padding-top: 35%;
     padding-bottom: 50px;
+    overflow-y: auto;
 }
 
 .menuOpen {
@@ -53,6 +54,7 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
 }
 
 .navigationItem {
