--- a/src/components/Desktop/Header/header.module.css
+++ b/src/components/Desktop/Header/header.module.css
@@ -6,8 +6,8 @@
 }
 
 .header {
-    width: 100%;
-    max-width: 1200px;
+    width: 70%;
+    max-width: 1440px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,6 +18,7 @@
 .logo {
     max-width: 100px;
     cursor: pointer;
+    margin-right: 5%;
 }
 
 .navigation {
@@ -28,8 +29,24 @@
 .navigationItem {
     margin-right: 60px;
     font-family: Inter;
-    font-size: 18px;
+    font-size: 16px;
     color: var(--Black);
+}
+@media (min-width: 1024px) and (max-width: 1390px) {
+    .navigationItem {
+        margin-right: 20px;
+        font-size: 15px;
+    }
+    .logo {
+        max-width: 100px;
+        cursor: pointer;
+        margin-right: 20px;
+    }
+}
+@media (min-width: 1391px) and (max-width: 1475px) {
+    .navigationItem {
+        margin-right: 30px;
+    }
 }
 
 .navigationItem:last-child {
