--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -35,7 +35,7 @@
     background-color: var(--LightBlue);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     box-sizing: border-box;
     z-index: 1000;
     transition: right 0.3s ease-in-out;
@@ -67,6 +67,7 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+    margin-top: 5%;
     margin-bottom: 50px;
 }
 
