--- a/src/components/Tablet/Header/header.module.css
+++ b/src/components/Tablet/Header/header.module.css
@@ -39,7 +39,7 @@
     box-sizing: border-box;
     z-index: 1000;
     transition: right 0.3s ease-in-out;
-    padding-top: 35%;
+    padding-top: 10%;
     padding-bottom: 50px;
     overflow-y: auto;
 }
@@ -70,6 +70,7 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+    margin-top: 10%;
     margin-bottom: 50px;
 }
 
