--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -4,7 +4,7 @@
     justify-content: end;
     align-items: start;
     position: relative;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
 }
 
 .logo {
@@ -14,7 +14,8 @@
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    width: auto;
+    max-width: 70px;
+    max-height: 70px;
 }
 
 .burger {
