--- a/src/components/Desktop/Priorities/priorities.module.css
+++ b/src/components/Desktop/Priorities/priorities.module.css
@@ -1,4 +1,4 @@
-.extraContainer{
+.extraContainer {
     max-width: 1920px;
     width: 70%;
     padding-top: 200px;
@@ -6,18 +6,12 @@
 
 .container {
     display: flex;
-    background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
-    margin-bottom: 150px;
     position: relative;
-    border-radius: 20px;
-}
-
-.leftSide {
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 40%;
+    background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     padding-left: 60px;
+    margin-bottom: 120px;
 }
 
 .title {
@@ -26,24 +20,44 @@
     color: var(--Black);
     margin-bottom: 30px;
     margin-top: 100px;
+    width: 45%;
 }
 
 .description {
     color: var(--Black);
     font-size: 18px;
     font-weight: 400;
-    width: 60%;
-    margin-bottom: 120px;
+    margin-bottom: 40px;
+    width: 45%;
+    align-self: start;
 }
 
-.rightSide {
-    width: 100%;
+.imageWrapper {
+
 }
 
 .image {
     position: absolute;
-    right: -10px;
-    bottom: 30px;
-    max-width: 60%;
+    z-index: 99;
+    right: -15%;
+    bottom: 15%;
+    max-width: 70%;
     max-height: 100%;
+}
+
+.button {
+    background-color: var(--Blue);
+    padding: 17px 0;
+    color: white;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: Inter;
+    border-color: transparent;
+    border-radius: 10px;
+    margin-bottom: 110px;
+    cursor: pointer;
+    align-self: start;
+    text-align: center;
+    text-decoration: none;
+    min-width: 35%;
 }
