--- a/src/components/Mobile/Contact/contact.module.css
+++ b/src/components/Mobile/Contact/contact.module.css
@@ -17,21 +17,14 @@
     font-weight: 500;
     text-align: center;
     padding: 0 45px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
-.description {
+
+.socialLinks {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    color: var(--Black);
-    font-size: 24px;
-    font-weight: 500;
-    margin-bottom: 60px;
-    align-items: center;
-}
-
-.email {
-    color: var(--Blue);
-    text-decoration: none;
-    margin-bottom: 50px;
+    justify-content: center;
+    gap: 10%;
+    margin-bottom: 120px;
 }
