--- a/src/components/Mobile/Footer/footer.module.css
+++ b/src/components/Mobile/Footer/footer.module.css
@@ -2,22 +2,16 @@
     width: 100%;
     border-top: solid 1px #d3d3d3;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    justify-content: center;
+    padding: 30px 0
 }
+
 
 .copyright {
     color: black;
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 10px;
+    align-self: center;
 }
-
-.socialLinks {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
 
