--- a/src/components/Tablet/Contact/contact.module.css
+++ b/src/components/Tablet/Contact/contact.module.css
@@ -17,7 +17,7 @@
     font-weight: 500;
     text-align: center;
     padding: 0 45px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .description {
@@ -30,8 +30,10 @@
     align-items: center;
 }
 
-.email {
-    color: var(--Blue);
-    text-decoration: none;
+.socialLinks {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
     margin-bottom: 50px;
 }
