--- a/src/components/Tablet/Footer/footer.module.css
+++ b/src/components/Tablet/Footer/footer.module.css
@@ -2,22 +2,17 @@
     width: 100%;
     border-top: solid 1px #d3d3d3;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    justify-content: center;
 }
 
 .copyright {
     color: black;
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 10px;
+    padding: 30px 0;
 }
 
-.socialLinks {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
+
 
 
