--- a/src/components/Tablet/GetStartedToday/getStartedToday.module.css
+++ b/src/components/Tablet/GetStartedToday/getStartedToday.module.css
@@ -18,20 +18,18 @@
     font-size: 22px;
     font-weight: 400;
     margin-bottom: 50px;
+    max-width: 90%;
 }
 
 .links {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 10%;
 }
 
 .link {
     width: 200px;
-    margin-right: 5%;
-    &:last-child{
-        margin-right: 0;
-    }
 }
 
 .linkImage {
@@ -39,7 +37,6 @@
 }
 
 .image {
-    margin-right: 9%;
-    max-width: 100%;
+    max-width: 70%;
     width: 100%;
 }
