--- a/src/components/TabletL/Contact/contact.module.css
+++ b/src/components/TabletL/Contact/contact.module.css
@@ -1,6 +1,6 @@
 .container {
     max-width: 1920px;
-    width: 70%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +31,10 @@
     margin-bottom: 60px;
 }
 
-.email {
-    color: var(--Blue);
-    text-decoration: none;
+.socialLinks {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    margin-bottom: 50px;
 }
