--- a/src/components/TabletL/Banner/banner.module.css
+++ b/src/components/TabletL/Banner/banner.module.css
@@ -2,17 +2,18 @@
     display: flex;
     justify-content: center;
     padding-top: 10px;
-    font-family: Inter;
     position: relative;
+
 }
 
 .bannerContent {
     max-width: 70%;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     justify-self: center;
     margin-bottom: 50px;
+    flex-wrap: wrap;
 }
 
 
@@ -62,40 +63,39 @@
     font-size: 35px;
     font-weight: 500;
     margin-bottom: 20px;
-    margin-top: 50px;
 }
 
 .subtitle {
     font-size: 20px;
     margin-bottom: 40px;
     color: var(--Black);
+    max-width: 80%;
 }
 
 .button {
     background-color: var(--Blue);
-    padding: 10px 50px;
+    padding: 10px 30px;
     color: white;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 500;
-    font-family: Inter;
     border-color: transparent;
     border-radius: 10px;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     cursor: pointer;
 }
 
 .statistic {
-    display: flex;
     width: 100%;
+    display: flex;
+    gap: 10%;
 }
 
 .statisticItemWrapper {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    min-width: 40%;
-    margin-right: 6%;
-    &:last-child{
+
+    &:last-child {
         margin-right: 0;
     }
 }
@@ -116,6 +116,7 @@
 
 .statisticItemText {
     display: flex;
+    flex-wrap: wrap;
     color: var(--Black);
     font-weight: 400;
     font-size: 18px;
