--- a/src/components/TabletL/Footer/footer.module.css
+++ b/src/components/TabletL/Footer/footer.module.css
@@ -3,31 +3,12 @@
     border-top: solid 1px #d3d3d3;
 }
 
-.content {
-    width: 100%;
-    max-width: 1200px; /* Set a max width to center content */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px auto;
-    padding: 0 20px; /* Add padding to create space on the sides */
-    box-sizing: border-box; /* Ensure padding is included in width */
-}
-
 .copyright {
     color: black;
     font-size: 18px;
     font-weight: 500;
+    padding: 30px 0;
+    display: flex;
+    justify-content: center;
 }
 
-.socialLinks:hover {
-    cursor: pointer;
-}
-
-.socialLinkItem {
-    margin-right: 30px;
-}
-
-.socialLinkItem:last-child {
-    margin-right: 0;
-}
