--- a/src/components/TabletL/WhyChoose/whyChoose.module.css
+++ b/src/components/TabletL/WhyChoose/whyChoose.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 80px;
+    margin: 0 auto 80px;
     padding: 30px 20px 0;
     box-sizing: border-box;
 }
@@ -33,6 +33,7 @@
 
 .reason {
     margin-bottom: 30px;
+    max-width: 80%;
 }
 
 .reasonNameWrapper {
