--- a/src/components/Desktop/Banner/banner.module.css
+++ b/src/components/Desktop/Banner/banner.module.css
@@ -6,12 +6,13 @@
 }
 
 .bannerContent {
-    max-width: 70%;
+    width: 80%;
     display: flex;
     align-items: start;
     justify-content: center;
     justify-self: center;
     margin-bottom: 50px;
+
 }
 
 
@@ -32,8 +33,8 @@
 }
 
 .smallCard {
-    max-width: 70%;
-    height: auto;
+    max-width: 80%;
+    margin-left: 2%;
 }
 
 .cardWrapper {
@@ -59,7 +60,7 @@
 
 .title {
     color: var(--Black);
-    font-size: 58px;
+    font-size: 3.625rem;
     font-weight: 500;
     margin-bottom: 20px;
 }
@@ -68,7 +69,7 @@
     font-size: 22px;
     margin-bottom: 40px;
     color: var(--Black);
-    max-width: 85%;
+    max-width: 90%;
 }
 
 .button {
@@ -92,7 +93,12 @@
     flex-direction: column;
     justify-content: left;
     margin-right: 55px;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
+
 
 .upperStatisticItemText {
     color: var(--Black);
@@ -106,20 +112,25 @@
     font-size: 42px;
     color: var(--Blue);
     margin-bottom: 10px;
+    white-space: nowrap;
 }
 
 .statisticItemText {
     display: flex;
-    flex-wrap: nowrap;
     color: var(--Black);
     font-weight: 400;
     font-size: 22px;
+    white-space: nowrap;
+    max-width: 80%;
 }
 
+.statisticItemWrapper:last-child .statisticItemText {
+    white-space: normal;
+}
 
 .socialLinksWrapper {
     position: absolute;
-    left: 60px;
+    left: 2.5%;
     top: 150px;
 }
 
