--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Inter;
+    user-select: none;
 }
 
-a{
+a {
     -webkit-tap-highlight-color: transparent;
 }
