--- a/src/components/TabletL/Header/header.module.css
+++ b/src/components/TabletL/Header/header.module.css
@@ -1,41 +1,126 @@
-.headerContainer {
+.header {
     width: 100%;
     display: flex;
-    padding: 30px 0;
-    justify-content: center;
-    max-width: 1024px;
+    justify-content: end;
+    align-items: start;
+    position: relative;
+    margin-bottom: 12%;
 }
 
-.header {
-    max-width: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    box-sizing: border-box;
-}
 
 .logo {
-    max-width: 70px;
+    flex: 0;
+    position: absolute;
+    z-index: 99;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 15%;
+}
+
+.burger {
+    width: 50px;
+    margin-top: 5%;
     cursor: pointer;
+    position: relative;
+    z-index: 100;
     margin-right: 5%;
 }
 
-.navigation {
-    display: flex;
-    align-items: center;
+.menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
     width: 100%;
+    max-width: 100%;
+    height: 100%;
+    background-color: var(--LightBlue);
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    box-sizing: border-box;
+    z-index: 99;
+    transition: right 0.3s ease-in-out;
+    padding-top: 10%;
+    padding-bottom: 50px;
+    overflow-y: auto;
+}
+
+.menuOpen {
+    right: 0;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
 }
 
 .navigationItem {
-    font-size: 16px;
-    margin-right: 18px;
+    font-size: 25px;
+    font-weight: 400;
     color: var(--Black);
-    display: flex;
+    margin-bottom: 35px;
 }
 
-.navigationItem:hover {
+.navigationItemChangeLang {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 10%;
+    margin-bottom: 3%;
+}
+
+.socials img {
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
+
+
+.dropdownMenu {
+    position: absolute;
+    top: 60px;
+    left: 50%;
+    background: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    border-radius: 7.5%;
+    min-width: 200px;
+    transform: translateX(-50%);
+}
+
+.dropdownItem {
+    padding: 20px;
+    white-space: nowrap;
+    z-index: 3;
+    font-size: 25px;
+    font-weight: 400;
+    color: var(--Black);
+}
+
+.dropdownItem:hover {
+    background: #157EFC;
+    color: #fff
+}
+
+.dropIcon {
+    margin-left: 10px;
+}
+
+.dropIconOpened {
+    transform: rotateX(180deg);
+    margin-left: 5px;
+}
+
+
