--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@
     padding: 0;
     font-family: Inter, serif;
     user-select: none;
+
+    ::-webkit-scrollbar {
+        width: 0;
+    }
 }
 
 a {
     -webkit-tap-highlight-color: transparent;
 }
+
+
