--- a/src/components/Desktop/Header/header.module.css
+++ b/src/components/Desktop/Header/header.module.css
@@ -1,6 +1,14 @@
 .headerContainer {
     width: 100%;
-    max-width: 1880px;
+    max-width: 1920px;
+    display: flex;
+    padding: 30px 0;
+    justify-content: center;
+}
+
+.headerContainerUa {
+    width: 80%;
+    max-width: 1520px;
     display: flex;
     padding: 30px 0;
     justify-content: center;
@@ -10,16 +18,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
     max-width: 80%;
+
 }
 
 @media (min-width: 1025px) and (max-width: 1120px) {
     .header {
         max-width: 100%;
     }
-
-    .logo {
+    .logo{
         margin-left: 3%;
     }
 }
@@ -27,7 +35,7 @@
 .logo {
     max-width: 100px;
     cursor: pointer;
-    margin-right: 30px;
+    margin-right: 20px;
 }
 
 .navigation {
