--- a/src/components/Desktop/Priorities/priorities.module.css
+++ b/src/components/Desktop/Priorities/priorities.module.css
@@ -11,6 +11,7 @@
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     padding-left: 60px;
     margin-bottom: 120px;
+    max-width: 1920px;
 }
 
 .title {
