--- a/src/components/Mobile/Banner/banner.module.css
+++ b/src/components/Mobile/Banner/banner.module.css
@@ -35,15 +35,15 @@
 .statistic {
     display: flex;
     margin-bottom: 50px;
-    justify-content: space-between;
-    align-items: start;
     width: 100%;
+    justify-content: space-between;
 }
 
 .statisticItemWrapper {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    width: 31%;
+
 }
 
 .statisticItemTextBefore {
@@ -57,6 +57,7 @@
     font-size: 28px;
     color: var(--Blue);
     margin-bottom: 5px;
+    /*white-space: nowrap;*/
 }
 
 .statisticItemText {
@@ -64,7 +65,7 @@
     color: var(--Black);
     font-weight: 400;
     font-size: 16px;
-    max-width: 25%;
+    flex-wrap: wrap;
 }
 
 .doctor {
