--- a/src/components/TabletL/WhyChoose/whyChoose.module.css
+++ b/src/components/TabletL/WhyChoose/whyChoose.module.css
@@ -5,13 +5,13 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto 80px;
-    padding: 30px 20px 0;
+    padding: 30px 0;
     box-sizing: border-box;
 }
 
 .leftSide {
     flex: 1;
-    padding-right: 20px;
+    /*padding-right: 20px;*/
 }
 
 .doctorImage {
@@ -19,7 +19,7 @@
 }
 
 .rightSide {
-    flex: 1;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
 }
