changed images on bigger resolution

--- a/src/components/Desktop/Header/header.module.css
+++ b/src/components/Desktop/Header/header.module.css
@@ -90,9 +90,11 @@
 
 .dropIcon {
     margin-left: 5px;
+    width: 16px;
 }
 
 .dropIconOpened {
     transform: rotateX(180deg);
     margin-left: 5px;
+    width: 16px;
 }
