- added .ide to .gitIgnore - minor changes of style

--- a/src/components/Mobile/Header/header.module.css
+++ b/src/components/Mobile/Header/header.module.css
@@ -110,12 +110,14 @@
 }
 
 .dropIcon {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: 1rem;
 }
 
 .dropIconOpened {
     transform: rotateX(180deg);
     margin-left: 5px;
+    width: 1rem;
 }
 
 
