--- a/src/components/Tablet/Header/header.module.css
+++ b/src/components/Tablet/Header/header.module.css
@@ -90,7 +90,7 @@
 
 .dropdownMenu {
     position: absolute;
-    top: 60px;
+    top: 45px;
     left: 50%;
     background: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -115,11 +115,13 @@
 }
 
 .dropIcon {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: 1rem;
 }
 
 .dropIconOpened {
     transform: rotateX(180deg);
     margin-left: 5px;
+    width: 1rem;
 }
 
