--- a/src/components/TabletL/Header/header.module.css
+++ b/src/components/TabletL/Header/header.module.css
@@ -115,12 +115,14 @@
 }
 
 .dropIcon {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: 1.5rem;
 }
 
 .dropIconOpened {
     transform: rotateX(180deg);
     margin-left: 5px;
+    width: 1.5rem;
 }
 
 
