--- a/src/components/TabletL/GetStartedToday/getStartedTodat.module.css
+++ b/src/components/TabletL/GetStartedToday/getStartedTodat.module.css
@@ -11,6 +11,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+    padding-right: 15px;
 }
 
 .title {
@@ -30,18 +31,14 @@
 
 .links {
     display: flex;
-    gap: 5%;
-
-
 }
 
-.link{
-
-}
 
 .linkImage {
-
+    width: 90%;
+    max-width: 190px;
 }
+
 
 .phoneWrapper {
     display: flex;
