--- a/src/components/Mobile/Contact/contact.module.css
+++ b/src/components/Mobile/Contact/contact.module.css
@@ -5,6 +5,7 @@
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     border-radius: 20px;
     padding-top: 50px;
+    margin: 0 15px;
 }
 
 .image {
