--- a/src/components/sections/TabletL/Contact/contact.module.css
+++ b/src/components/sections/TabletL/Contact/contact.module.css
@@ -7,6 +7,8 @@
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     margin-bottom: 110px;
     border-radius: 20px;
+    padding: 0 25px;
+    box-sizing: border-box;
 }
 
 .image {
@@ -28,7 +30,8 @@
     color: var(--Black);
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 .socialLinks {
