--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
     padding: 0;
     font-family: Inter, serif;
     user-select: none;
+    box-sizing: border-box;
+    scrollbar-width: none;
 }
 
 a {
