--- a/src/components/sections/Tablet/Banner/banner.module.css
+++ b/src/components/sections/Tablet/Banner/banner.module.css
@@ -8,6 +8,7 @@
     font-size: 45px;
     font-weight: 500;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .subtitle {
@@ -15,6 +16,7 @@
     font-weight: 400;
     color: var(--Black);
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .button {
