--- a/src/components/sections/Tablet/Contact/contact.module.css
+++ b/src/components/sections/Tablet/Contact/contact.module.css
@@ -5,6 +5,8 @@
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     border-radius: 20px;
     padding-top: 50px;
+    margin: 0 15px;
+    align-self: center;
 }
 
 .image {
@@ -25,9 +27,10 @@
     flex-direction: column;
     color: var(--Black);
     font-size: 26px;
-    font-weight: 500;
-    margin-bottom: 60px;
+    font-weight: 400;
+    margin-bottom: 40px;
     align-items: center;
+    text-align: center;
 }
 
 .socialLinks {
