--- a/src/components/sections/Tablet/GetStartedToday/getStartedToday.module.css
+++ b/src/components/sections/Tablet/GetStartedToday/getStartedToday.module.css
@@ -1,6 +1,5 @@
 .container {
     display: flex;
-    align-items: center;
     flex-direction: column;
     padding: 20px 15px 0;
 }
@@ -11,6 +10,8 @@
     font-size: 35px;
     font-weight: 500;
     margin-bottom: 20px;
+    text-align: center;
+    align-self: center;
 }
 
 .description {
@@ -18,8 +19,10 @@
     font-size: 22px;
     font-weight: 400;
     margin-bottom: 50px;
-    max-width: 90%;
+    width: 90%;
+    align-self: center;
 }
+
 .button {
     background-color: var(--Blue);
     padding: 16px 10px;
