--- a/src/components/sections/Mobile/Contact/contact.module.css
+++ b/src/components/sections/Mobile/Contact/contact.module.css
@@ -4,8 +4,8 @@
     align-items: center;
     background-image: linear-gradient(to bottom, rgba(226, 240, 255, 1), rgba(226, 240, 255, 0));
     border-radius: 20px;
-    padding-top: 50px;
     margin: 0 15px;
+    padding: 50px 15px 0;
 }
 
 .image {
@@ -17,10 +17,18 @@
     font-size: 28px;
     font-weight: 500;
     text-align: center;
-    padding: 0 15px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
+.description {
+    display: flex;
+    flex-direction: column;
+    color: var(--Black);
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 40px;
+    max-width: 97%;
+}
 
 .socialLinks {
     width: 100%;
